--- a/css/register.css
+++ b/css/register.css
@@ -109,7 +109,7 @@
 .btn {
     width: 200px;
     height: 34px;
-    background-color: skyblue;
+    background-color: #ececec;
     font-size: 14px;
     color: black;
     cursor: pointer;
