--- a/css/blog_edit.css
+++ b/css/blog_edit.css
@@ -1,30 +1,109 @@
+html,
 body {
+    height: 100%;
+    background-color: #f5f5f5;
     font-family: Arial, sans-serif;
-    margin: 0;
+}
+
+.wrap {
+    min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f6f6f6;
 }
 
-.editor {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
+/* ナビ */
+.aside {
+    width: 200px;
+    background-color: skyblue;
+    padding-top: 40px;
+    color: white;
+    text-align: center;
+}
+
+.aside h2 {
+    text-align: center;
+    color: blue;
+}
+
+.nav {
+    padding-left: 0;
+}
+
+.nav li {
     width: 100%;
+    height: 60px;
+    line-height: 60px;
+    cursor: pointer;
+    list-style: none;
 }
 
-h1 {
-    font-size: 32px;
-    margin-bottom: 20px;
-    color: #333;
+.nav li a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    transition: background-color 0.2s ease;
+}
+
+.nav li a.active {
+    color: yellow;
+}
+
+/* Edit画面 */
+.main {
+    flex: 1;
+    background-color: white;
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+    border: 1px solid #ebeef5;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.top-nav {
+    height: 60px;
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 40px;
+    background-color: #fff;
+}
+
+.quit {
+    cursor: pointer;
+    color: skyblue;
+}
+
+.quit:hover {
+    color: #3184d7;
+}
+
+
+.nav-item span {
+    cursor: pointer;
+}
+
+.nav-item span:last-of-type {
+    margin-left: 20px;
+}
+
+.content {
+    padding: 30px;
+}
+
+.card {
+    box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
+    border: 1px solid #ebeef5;
+    padding: 20px;
+}
+
+.card .title1 {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ebeef5;
 }
 
 .title,
-.content,
 .image-upload,
 .category {
     width: 100%;
@@ -33,7 +112,6 @@ h1 {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    box-sizing: border-box;
 }
 
 .title {
@@ -43,6 +121,12 @@ h1 {
 
 .content {
     height: 300px;
+    margin-top: 10px;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 4px;
+    font-size: 16px;
 }
 
 .category {
@@ -61,61 +145,46 @@ h1 {
 }
 
 .submit:hover {
-    background-color: skyblue;
-}
-
-.image-upload {
-    cursor: pointer;
-    background-color: gray;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 4px;
-    text-align: center;
-}
-
-.image-upload:hover {
     background-color: #0056b3;
 }
 
-.image-preview {
-    max-width: 300px;
-    max-height: 300px;
-    overflow: hidden;
+label {
+    display: block;
+}
+
+/* 画像 */
+
+.image-preview .place {
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    font-size: 40px;
+    line-height: 200px;
+    border: 1px solid #ddd;
+    color: #aaa;
+    cursor: pointer;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.image-upload {
+    display: none;
 }
 
 .image-preview img {
-    width: 100%;
-    height: auto;
+    max-width: 200px;
+    max-height: 200px;
 }
 
-.upload-btn-wrapper {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-}
-
-.btn-upload {
-    border: 2px solid #007bff;
-    color: #007bff;
-    background-color: #fff;
-    padding: 10px 20px;
-    border-radius: 4px;
-    font-size: 16px;
-    font-weight: bold;
+.img {
+    display: none;
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    font-size: 40px;
+    line-height: 200px;
+    border: 1px solid #ddd;
+    color: #aaa;
     cursor: pointer;
-}
-
-.upload-btn-wrapper input[type=file] {
-    font-size: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-}
-
-.upload-btn-wrapper:hover .btn-upload {
-    border-color: skyblue;
-    color: #007bff;
+    vertical-align: top;
 }
