--- a/css/blog_index.css
+++ b/css/blog_index.css
@@ -67,8 +67,8 @@
 }
 
 .sk_bd ul li {
-    flex: 1;
-    width: calc(25% - 10px);
+
+    width: 290px;
     height: 460px;
     margin: 5px;
     margin-top: 20px;
@@ -111,6 +111,9 @@
     margin: 9px 15px 0;
 }
 
+.fr ul li a:hover {
+    color: skyblue;
+}
 
 .header {
     display: flex;
