--- a/css/login.css
+++ b/css/login.css
@@ -12,6 +12,22 @@ body {
     height: 100vh;
 }
 
+/* ログイン成功かどうかを提示 */
+.alert {
+    width: 400px;
+    position: fixed;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+}
+
+.show {
+    display: block !important;
+}
+
+
+
 .login-container {
     background-color: rgba(255, 255, 255, 0.4);
     border-radius: 5px;
